# graph-starter-kit

./: .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
src/api/: dependencies.py
src/api/adapters/: stream_adapter.py
src/api/middleware/: exception_handler.py
src/api/routers/assistants/: chat.py
src/api/schemas/: chat.py
src/core/: settings.py
src/core/constants/: enums.py  errors.py
src/domain/: exceptions.py
src/domain/models/: message.py
src/infrastructure/llm_provider/: anthropic_adapter.py  base.py  factory.py  gemini_adapter.py  openai_adapter.py
src/infrastructure/logging/: setup.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/models/: thread.py
src/infrastructure/persistence/repositories/: thread_repository.py
src/mcp/: server.py
src/mcp/resources/: thread_resource.py
src/mcp/tools/: chat_tool.py
src/workflows/assistants/chat/: graph.py  nodes.py  state.py
src/workflows/shared/: checkpointer.py
src/workflows/shared/utils/: node_helpers.py
tests/: conftest.py  test_chat_api.py  test_chat_workflow.py
